--- a/404.html
+++ b/404.html
@@ -1,75 +1,1 @@
-<h1>Lota Beta  FAQ</h1>
-<br>
-Lota is currently in early beta testing. There are alot of features currently in development including direct, encrypted peer-to-peer audio/video calls, more stickmoji selections, animojis, fonts, filters, brushes, blips, exciting audio features, styles, animations, improved UI and much more... <br>
-
-Here are some frequently asked questions that clarify the current beta testing functionality: 
-
-
-<h2>Can I send enriched colorful text and animated stickmojis to anyone on the contacts list, even if they do not have the app?</h2>
-<b>Yes!</b> Lota supports SMS/MMS, as well as Peer to Peer mode. Just click on the contact, type something and hit the send button. The message will be sent via MMS if the contact does not have the app.
-If the contact has the app, the enriched text message will be sent directly via your Internet connection, and will appear just as you see it on your screen.  
-<br/>
-<h2>How can I change the default chat background?</h2>
-In the Main contact screen, select the top right drop down "Select background" option. Choose either a background image or color of your preference.
-<br/>
-<h2>How can I turn on/off automatic reading out loud (text to speech) of my incoming messages?</h2>
-In the Chat screen, select the  "Settings" button to the left of the "Upload button"  at the top right of the screen and toggle the "Text speech reader" button.
-<br/>
-<h2>What is "Recents" tab in the Main contact screen?</h2>
-"Recents" contains a list of contacts that you messaged. The "Contact" tab has a list of all your contacts.
-<br/>
-<h2>How can I send an enriched colorful text message to a contact?</h2>
-In the Main contact screen, click on a contact in either the "Recent" or "Contact" tab. The Chat screen will appear where you can type. By default, your message will be colorful with glow and graffiti font. You can change the style, font, filters, colors, and animations to suite your preference. Once you entered text, your enriched message will be sent to your contact either thru MMS or directly via your Internet connection.
-<br/>
-<h2>How can I change the style of enriched text message?</h2>
-In the Chat screen, select the "R" button to open the "Text Style" screen. In this screen you can select color, fonts, text filters, animations, glitter, lightning and other cool effects. Once selected, touch the blue Checkmark button at the bottom of the screen. 
-<br/>
-<h2>How can I send a customized animated stickmoji message?</h2>
-In the Chat screen, select the "Stickfigure" button to open the Stickmoji animation configration screen. Select an animation from the list below, which will show a "Send" button below. Select the "Send" button and send the animation with default face and options.
-<br>
-In the Stickmoji screen, you can also optionally select and configure a face, accessories, scenes, audio, pictures, and animations for the stickmoji message. 
-<br/>
-<h2>How can I select a face for customized animated stickmoji message?</h2>
-In the Stickmoji screen, the Person tab contains 4 options for face selection in the face section. 
-You can take a selfie by touching the "Selfie" button. 
-You can select a local image  by touching the "Image" button, below the "Selfie" button
-You can select an image on the Internet, by copying a web URL link and then pasting it in the "URL" text field.
-You can select an emoticon face from the library provided, by scrolling thru faces and selecting your choice.
-<br/>
-<h2>How can I select accessories for customized animated stickmoji message?</h2>
-In the Stickmoji screen, the Person tab contains a scrollable list of hair, hats, auras and other accessories. You can select multiple accessories from different categories.
-<br/>
-<h2>How can I add a background photo to the stickmoji message (virtualization)?</h2>
-In the Stickmoji screen, the Scene tab contains three image options: camera, local file, or image file from Internet (URL text field). Select the button you prefer or enter the web URL of the  image hosted on the internet.
-<br/>
-<h2>How can I add audio to the stickmoji message?</h2>
-In the Stickmoji screen, the Scene tab contains two audio options: local file or audio file from Internet (URL text field). Select the button you prefer or enter the web URL of the  audio file  hosted on the internet.
-<br/>
-<h2>How can I add multiple Stickfigures to the Stickmoji message?</h2>
-In the Stickmoji screen, there are three Person tabs, each can be configured individually. Once configured, select the "Send" button below.
-<br/>
-<h2>How can I send graffiti drawing message?</h2>
-In the Chat screen, select the  "Graffiti squiggle" button (to the left of the Stickfigure button). Draw a message or painting something, and select the "Send" button below.
-You can optionally customize the drawing by going to the "Draw Settings" screen option at the top right of the screen and selecting different brush colors, types, sizes, and backgrounds from picture or color.
-<br>
-<h2>How can I send audio blip message?</h2>
-In the Chat screen, select the  "Audio" button to open the Audio blip screen and select the blip to send. Audio blips will not be sent in SMS mode, the contact needs to have the Lota app running.
-<br/>
-<h2>How can I send a media file (audio/video) or take a picture and send it?</h2>
-In the Chat screen, select the  "Upload" button at the top right of the screen and select the "Image", "Audio" or Camera. 
-<br/>
-<h2>What is "Spangle Bangle"?</h2>
-Try it out! the app is still in beta, so cool things just need to be explored!
-<br/>
-<h2>How can I automatically send a translated text message from English to slang or another language?</h2>
-In the Chat screen, select the  "Settings" button to the left of the "Upload button"  at the top right of the screen and select the "Slang" (or another language) from the second drop down menu.
-<br/>
-<h2>How can I turn on/off playing audio automatically?</h2>
-In the Chat screen, select the  "Settings" button to the left of the "Upload button"  at the top right of the screen and toggle the "Auto play sound" button.
-<br/>
-<h2>How can I establish secure direct peer-to-peer connection for texting?</h2>
-If the contact has Lota app running, then you can establish the P2P connection in the Chat screen, select the  "Try Connect P2P" option. It will attempt to esablish a P2P connection. If successful, a "Success" message will display. 
-<br/>
-<h2>What is the Lota about?</h2>
-Lota is about color! Its about celebrating diverse cultural urban expression! 
-<br>
+<meta http-equiv="refresh" content="0; url=https://wagoso.github.io/faq"> 
