--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Tap on the message to stop it from playing.
 Select  "Clear chat history" option in the drop down at the top right of the Chat screen. This will clear the messages, however the images/audio will not be deleted. You can manually remove the media files by going to the "yablo" install directory of the app and selecting the files you wish to remove.
 <br/>
 <h2>How can I establish secure direct peer-to-peer connection for texting?</h2>
-If the contact has Lota app running, then you can establish the P2P connection in the Chat screen, select the  "Try Connect P2P" option. It will attempt to esablish a P2P connection. If successful, a "Success" message will display. 
+If the contact has Lota app running, then you can establish the P2P connection in the Chat screen, select the  "Try Connect P2P" option. It will attempt to establish a P2P connection. If successful, a "Success" message will display. 
 <br/>
 <h2>What is the Lota about?</h2>
 Lota is about <yo>color!</yo> Its about celebrating diverse cultural urban expression! 
